--- a/src/css/ManagerMetting.css
+++ b/src/css/ManagerMetting.css
@@ -59,10 +59,10 @@
   background: linear-gradient(to right, #17215f, #33aeff);
   height: 100vh;
 }
-.form-add {
+.form-metting {
   background: #17215f;
   background: linear-gradient(to right, #17215f, #33aeff);
-  height: 105vh;
+  height: 87.3vh;
 }
 
 .card-signin {
